# timers

./: .gitignore  CMakeLists.txt  chrono_util.h  fps_timer.cpp  fps_timer.h  sleep_util.h  stop_watch.h  stoppable_timer.cpp  stoppable_timer.h  threaded_timer.cpp  threaded_timer.h
.github/workflows/: cmake-multi-platform.yml
example/: CMakeLists.txt  main.cpp
ext/spdlog-1.x/builds/: CPackConfig.cmake  CPackSourceConfig.cmake  spdlog.pc  spdlogConfigTargets.cmake
